--- a/templates/questions/brand.html
+++ b/templates/questions/brand.html
@@ -280,6 +280,7 @@
                 } else {
                     temp = get_data_localstorage('A10')
                 }
+                options_show(JSON.parse(localStorage.A6), 'dropdown')
             }
             else if (current_question == 17) {
                 //question17
@@ -325,32 +326,56 @@
             let result = ''
             if (type == 'brands') {
                 for (var i = 0; i < data.length; i++) {
-                    result += '<div class="form-check"><label class="form-check-label" for="flexCheckDefault">' + data[i].title + '<input class="form-check-input" type="checkbox" value="' + data[i].pk + '" name="' + data[i].title + '" id="flexCheckDefault"></label></div>'
+                    result += '<div class="form-check">' +
+                        '<label class="form-check-label" for="flexCheckDefault">' + data[i].title + '' +
+                        '<input class="form-check-input" type="checkbox" value="' + data[i].pk + '" name="' + data[i].title + '" id="flexCheckDefault">' +
+                        '</label>' +
+                        '</div>'
                 }
             }
             else if (type == 'rest') {
                 for (item in data) {
-                    result += '<div class="form-check"><label class="form-check-label" for="flexCheckDefault">' + item + '<input class="form-check-input" type="checkbox" value="' + data[item] + '" name="' + item + '" id="flexCheckDefault"></label></div>'
+                    result += '<div class="form-check">' +
+                        '<label class="form-check-label" for="flexCheckDefault">' + item + '' +
+                        '<input class="form-check-input" type="checkbox" value="' + data[item] + '" name="' + item + '" id="flexCheckDefault">' +
+                        '</label>' +
+                        '</div>'
                 }
             }
             else if (type == 'number') {
                 for (item in data) {
-                    result += '<div class="row">' + item + ': <label><input type="number" name="' + item + '" min="0" class="option form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm"></div></label></div>'
+                    result += '<div class="row">' +
+                        '<label>' + item + ': ' +
+                        '<input type="number" name="' + item + '" min="0" class="option form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">' +
+                        '</label>' +
+                        '</div>'
                 }
             }
             else if (type == 'numberWithLimit') {
                 for (item in data) {
-                    result += '<div class="row">' + item + ': <label><input min="0" max="' + data[item] + '" type="number" name="' + item + '" class="option form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm"></div></label></div>'
+                    result += '<div class="row">' +
+                        '<label>' + item + ': ' +
+                        '<input min="0" max="' + data[item] + '" type="number" name="' + item + '" class="option form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">' +
+                        '</label>' +
+                        '</div>'
                 }
             }
             else if (type == 'currency') {
                 for (item in data) {
-                    result += '<div class="row">' + item + ': <label><input placeholder="تومان" type="number" name="' + item + '" min="0" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm"></div></label></div>'
+                    result += '<div class="row">' +
+                        '<label>' + item + ': ' +
+                        '<input placeholder="تومان" type="number" name="' + item + '" min="0" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">' +
+                        '</label>' +
+                        '</div>'
+                }
+            }
+            else if(type=='dropdown'){
+                for (item in data) {
+                    result += '<div class="row"><label>' + item + ': </label></div>'
                 }
             }
             options_html.fadeIn(400).html(result)
             next_btn.fadeIn(400)
-            previous_btn.fadeIn(400)
         }
 
         function questions_show() {
