--- a/templates/questions/brand.html
+++ b/templates/questions/brand.html
@@ -77,7 +77,7 @@
                 answer = document.querySelectorAll('input[type=number]')
             }
             if (answer.length == 0) {
-                answer=$('select')
+                answer = $('select')
             }
 
 
@@ -308,6 +308,7 @@
                 } else {
                     temp = get_data_localstorage('A11')
                 }
+                options_show(JSON.parse(localStorage.A4), 'radioButton')
             } else if (current_question == 18) {
                 //question18
                 let temp
@@ -392,6 +393,55 @@
                         '<option value="2">دوم</option>' +
                         '<option value="3">سوم</option>' +
                         '</select></label></div>'
+                }
+            } else if (type == 'radioButton') {
+                for (item in data) {
+                    result += '<h4>' + item + '</h4>'
+                    result +=
+                        '<div class="form-check form-check-inline">' +
+                        '<label class="form-check-label" for="flexRadioDefault1">روزی یکبار یا بیشتر</label>' +
+                        '<input class="form-check-input" type="radio" name="' + item + '" id="flexRadioDefault1" value="1">' +
+                        ' </div>' +
+                        '<div class="form-check form-check-inline">' +
+                        '<label class="form-check-label" for="flexRadioDefault2">چهار الی پنج مرتبه در هفته</label>' +
+                        '<input class="form-check-input" type="radio" name="' + item + '" id="flexRadioDefault2" value="2">' +
+                        ' </div>' +
+                        '<div class="form-check form-check-inline">' +
+                        '<label class="form-check-label" for="flexRadioDefault3">دو الی سه مرتبه در هفته</label>' +
+                        '<input class="form-check-input" type="radio" name="' + item + '" id="flexRadioDefault3" value="3">' +
+                        ' </div>' +
+                        '<div class="form-check form-check-inline">' +
+                        '<label class="form-check-label" for="flexRadioDefault4">یک مرتبه در هفته</label>' +
+                        '<input class="form-check-input" type="radio" name="' + item + '" id="flexRadioDefault4" value="4">' +
+                        ' </div>' +
+                        '<div class="form-check form-check-inline">' +
+                        '<label class="form-check-label" for="flexRadioDefault5">دو هفته یک مرتبه</label>' +
+                        '<input class="form-check-input" type="radio" name="' + item + '" id="flexRadioDefault5" value="5">' +
+                        ' </div>' +
+                        '<div class="form-check form-check-inline">' +
+                        '<label class="form-check-label" for="flexRadioDefault6">ماهی یک مرتبه</label>' +
+                        '<input class="form-check-input" type="radio" name="' + item + '" id="flexRadioDefault6" value="6">' +
+                        ' </div>' +
+                        '<div class="form-check form-check-inline">' +
+                        '<label class="form-check-label" for="flexRadioDefault7">هر دو الی سه ماه یک مرتبه</label>' +
+                        '<input class="form-check-input" type="radio" name="' + item + '" id="flexRadioDefault7" value="7">' +
+                        ' </div>' +
+                        '<div class="form-check form-check-inline">' +
+                        '<label class="form-check-label" for="flexRadioDefault8">هر چهار الی شش ماه یک مرتبه</label>' +
+                        '<input class="form-check-input" type="radio" name="' + item + '" id="flexRadioDefault8" value="8">' +
+                        ' </div>' +
+                        '<div class="form-check form-check-inline">' +
+                        '<label class="form-check-label" for="flexRadioDefault9">کمتر</label>' +
+                        '<input class="form-check-input" type="radio" name="' + item + '" id="flexRadioDefault9" value="9">' +
+                        ' </div>' +
+                        '<div class="form-check form-check-inline">' +
+                        '<label class="form-check-label" for="flexRadioDefault10">هیچوقت</label>' +
+                        '<input class="form-check-input" type="radio" name="' + item + '" id="flexRadioDefault10" value="10">' +
+                        ' </div>' +
+                        '<div class="form-check form-check-inline">' +
+                        '<label class="form-check-label" for="flexRadioDefault11">نمی دانم/نمی توانم بگویم</label>' +
+                        '<input class="form-check-input" type="radio" name="' + item + '" id="flexRadioDefault11" value="11">' +
+                        ' </div></div>'
                 }
             }
             options_html.fadeIn(400).html(result)
