--- a/templates/questions/brand.html
+++ b/templates/questions/brand.html
@@ -351,8 +351,7 @@
                         '</label>' +
                         '</div>'
                 }
-            }
-            else if (type == 'rest') {
+            } else if (type == 'rest') {
                 for (item in data) {
                     result += '<div class="form-check">' +
                         '<label class="form-check-label" for="flexCheckDefault">' + item + '' +
@@ -360,8 +359,7 @@
                         '</label>' +
                         '</div>'
                 }
-            }
-            else if (type == 'number') {
+            } else if (type == 'number') {
                 for (item in data) {
                     result += '<div class="row">' +
                         '<label>' + item + ': ' +
@@ -369,8 +367,7 @@
                         '</label>' +
                         '</div>'
                 }
-            }
-            else if (type == 'numberWithLimit') {
+            } else if (type == 'numberWithLimit') {
                 for (item in data) {
                     result += '<div class="row">' +
                         '<label>' + item + ': ' +
@@ -378,8 +375,7 @@
                         '</label>' +
                         '</div>'
                 }
-            }
-            else if (type == 'currency') {
+            } else if (type == 'currency') {
                 for (item in data) {
                     result += '<div class="row">' +
                         '<label>' + item + ': ' +
@@ -387,8 +383,7 @@
                         '</label>' +
                         '</div>'
                 }
-            }
-            else if (type == 'option') {
+            } else if (type == 'option') {
                 result += '<h3 class="error hide">لطفا مقادیر متفاوتی را انتخاب نمایید</h3>'
                 for (item in data) {
                     result += '<div class="row">' +
@@ -399,8 +394,7 @@
                         '<option value="3">سوم</option>' +
                         '</select></label></div>'
                 }
-            }
-            else if (type == 'radioButton') {
+            } else if (type == 'radioButton') {
                 result += '<div class="table-responsive"><table class="table align-middle"' +
                     '<thead>' +
                     '<tr>' +
