--- a/templates/questions/brand.html
+++ b/templates/questions/brand.html
@@ -128,7 +128,8 @@
                         alert('لطفا فقط یک برند را انتخاب کنید')
                     }
                 });
-            } else if (current_question == 9) {
+            }
+            else if (current_question == 9) {
                 //question9
                 let temp
                 if (next_or_previous == 'next') {
@@ -151,7 +152,8 @@
                     }
                 }
                 options_show(brands, 'brands')
-            } else if (current_question == 10) {
+            }
+            else if (current_question == 10) {
                 //question10
                 let temp
                 if (next_or_previous == 'next') {
@@ -162,7 +164,8 @@
                     temp = get_data_localstorage('A2')
                 }
                 options_show(temp, 'rest')
-            } else if (current_question == 11) {
+            }
+            else if (current_question == 11) {
                 //question11
                 let temp
                 if (next_or_previous == 'next') {
@@ -178,7 +181,8 @@
                         alert('لطفا حداکثر سه برند را انتخاب کنید')
                     }
                 });
-            } else if (current_question == 12) {
+            }
+            else if (current_question == 12) {
                 //question12
                 let temp
                 if (next_or_previous == 'next') {
@@ -193,7 +197,8 @@
                         $(this).val(min);
                     }
                 });
-            } else if (current_question == 13) {
+            }
+            else if (current_question == 13) {
                 //question13
                 previous_btn.removeClass('hide')
                 let temp
@@ -239,7 +244,8 @@
                         }]
                     },
                 });
-            } else if (current_question == 14) {
+            }
+            else if (current_question == 14) {
                 //question14
                 //چیزی ذخیره نمیشود
                 previous_btn.addClass('hide')
@@ -253,7 +259,8 @@
                         $(this).val(min);
                     }
                 });
-            } else if (current_question == 15) {
+            }
+            else if (current_question == 15) {
                 //question15
                 let temp
                 if (next_or_previous == 'next') {
@@ -262,7 +269,8 @@
                     temp = get_data_localstorage('A9')
                 }
                 options_show(JSON.parse(localStorage.A9), 'currency')
-            } else if (current_question == 16) {
+            }
+            else if (current_question == 16) {
                 //question16
                 let temp
                 if (next_or_previous == 'next') {
@@ -300,7 +308,8 @@
                         }
                     }
                 );
-            } else if (current_question == 17) {
+            }
+            else if (current_question == 17) {
                 //question17
                 let temp
                 if (next_or_previous == 'next') {
@@ -309,7 +318,8 @@
                     temp = get_data_localstorage('A11')
                 }
                 options_show(JSON.parse(localStorage.A4), 'radioButton')
-            } else if (current_question == 18) {
+            }
+            else if (current_question == 18) {
                 //question18
                 let temp
                 if (next_or_previous == 'next') {
@@ -351,7 +361,8 @@
                         '</label>' +
                         '</div>'
                 }
-            } else if (type == 'rest') {
+            }
+            else if (type == 'rest') {
                 for (item in data) {
                     result += '<div class="form-check">' +
                         '<label class="form-check-label" for="flexCheckDefault">' + item + '' +
@@ -359,7 +370,8 @@
                         '</label>' +
                         '</div>'
                 }
-            } else if (type == 'number') {
+            }
+            else if (type == 'number') {
                 for (item in data) {
                     result += '<div class="row">' +
                         '<label>' + item + ': ' +
@@ -367,7 +379,8 @@
                         '</label>' +
                         '</div>'
                 }
-            } else if (type == 'numberWithLimit') {
+            }
+            else if (type == 'numberWithLimit') {
                 for (item in data) {
                     result += '<div class="row">' +
                         '<label>' + item + ': ' +
@@ -375,7 +388,8 @@
                         '</label>' +
                         '</div>'
                 }
-            } else if (type == 'currency') {
+            }
+            else if (type == 'currency') {
                 for (item in data) {
                     result += '<div class="row">' +
                         '<label>' + item + ': ' +
@@ -383,7 +397,8 @@
                         '</label>' +
                         '</div>'
                 }
-            } else if (type == 'option') {
+            }
+            else if (type == 'option') {
                 result += '<h3 class="error hide">لطفا مقادیر متفاوتی را انتخاب نمایید</h3>'
                 for (item in data) {
                     result += '<div class="row">' +
@@ -394,7 +409,8 @@
                         '<option value="3">سوم</option>' +
                         '</select></label></div>'
                 }
-            } else if (type == 'radioButton') {
+            }
+            else if (type == 'radioButton') {
                 result += '<div class="table-responsive"><table class="table align-middle"' +
                     '<thead>' +
                     '<tr>' +
