--- a/templates/questions/brand.html
+++ b/templates/questions/brand.html
@@ -128,8 +128,7 @@
                         alert('لطفا فقط یک برند را انتخاب کنید')
                     }
                 });
-            }
-            else if (current_question == 9) {
+            } else if (current_question == 9) {
                 //question9
                 let temp
                 if (next_or_previous == 'next') {
@@ -152,8 +151,7 @@
                     }
                 }
                 options_show(brands, 'brands')
-            }
-            else if (current_question == 10) {
+            } else if (current_question == 10) {
                 //question10
                 let temp
                 if (next_or_previous == 'next') {
@@ -164,8 +162,7 @@
                     temp = get_data_localstorage('A2')
                 }
                 options_show(temp, 'rest')
-            }
-            else if (current_question == 11) {
+            } else if (current_question == 11) {
                 //question11
                 let temp
                 if (next_or_previous == 'next') {
@@ -181,8 +178,7 @@
                         alert('لطفا حداکثر سه برند را انتخاب کنید')
                     }
                 });
-            }
-            else if (current_question == 12) {
+            } else if (current_question == 12) {
                 //question12
                 let temp
                 if (next_or_previous == 'next') {
@@ -197,8 +193,7 @@
                         $(this).val(min);
                     }
                 });
-            }
-            else if (current_question == 13) {
+            } else if (current_question == 13) {
                 //question13
                 previous_btn.removeClass('hide')
                 let temp
@@ -244,8 +239,7 @@
                         }]
                     },
                 });
-            }
-            else if (current_question == 14) {
+            } else if (current_question == 14) {
                 //question14
                 //چیزی ذخیره نمیشود
                 previous_btn.addClass('hide')
@@ -259,8 +253,7 @@
                         $(this).val(min);
                     }
                 });
-            }
-            else if (current_question == 15) {
+            } else if (current_question == 15) {
                 //question15
                 let temp
                 if (next_or_previous == 'next') {
@@ -269,8 +262,16 @@
                     temp = get_data_localstorage('A9')
                 }
                 options_show(JSON.parse(localStorage.A9), 'currency')
-            }
-            else if (current_question == 16) {
+                $('.option').change(function () {
+                    var min = parseInt($(this).attr('min'));
+                    if ($(this).val() < min) {
+                        $(this).val(min);
+                    } else if ($(this).val() < 1000) {
+                        alert('مبلغ وارد شده کمتر از 1000 تومان میباشد')
+                        $(this).val(1000);
+                    }
+                });
+            } else if (current_question == 16) {
                 //question16
                 let temp
                 if (next_or_previous == 'next') {
@@ -308,8 +309,7 @@
                         }
                     }
                 );
-            }
-            else if (current_question == 17) {
+            } else if (current_question == 17) {
                 //question17
                 let temp
                 if (next_or_previous == 'next') {
@@ -318,8 +318,7 @@
                     temp = get_data_localstorage('A11')
                 }
                 options_show(JSON.parse(localStorage.A4), 'radioButton')
-            }
-            else if (current_question == 18) {
+            } else if (current_question == 18) {
                 //question18
                 let temp
                 if (next_or_previous == 'next') {
@@ -361,8 +360,7 @@
                         '</label>' +
                         '</div>'
                 }
-            }
-            else if (type == 'rest') {
+            } else if (type == 'rest') {
                 for (item in data) {
                     result += '<div class="form-check">' +
                         '<label class="form-check-label" for="flexCheckDefault">' + item + '' +
@@ -370,8 +368,7 @@
                         '</label>' +
                         '</div>'
                 }
-            }
-            else if (type == 'number') {
+            } else if (type == 'number') {
                 for (item in data) {
                     result += '<div class="row">' +
                         '<label>' + item + ': ' +
@@ -379,8 +376,7 @@
                         '</label>' +
                         '</div>'
                 }
-            }
-            else if (type == 'numberWithLimit') {
+            } else if (type == 'numberWithLimit') {
                 for (item in data) {
                     result += '<div class="row">' +
                         '<label>' + item + ': ' +
@@ -388,17 +384,15 @@
                         '</label>' +
                         '</div>'
                 }
-            }
-            else if (type == 'currency') {
+            } else if (type == 'currency') {
                 for (item in data) {
                     result += '<div class="row">' +
                         '<label>' + item + ': ' +
-                        '<input placeholder="تومان" type="number" name="' + item + '" min="0" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">' +
+                        '<input placeholder="تومان" type="number" name="' + item + '" min="0" class="option form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">' +
                         '</label>' +
                         '</div>'
                 }
-            }
-            else if (type == 'option') {
+            } else if (type == 'option') {
                 result += '<h3 class="error hide">لطفا مقادیر متفاوتی را انتخاب نمایید</h3>'
                 for (item in data) {
                     result += '<div class="row">' +
@@ -409,8 +403,7 @@
                         '<option value="3">سوم</option>' +
                         '</select></label></div>'
                 }
-            }
-            else if (type == 'radioButton') {
+            } else if (type == 'radioButton') {
                 result += '<div class="table-responsive"><table class="table align-middle"' +
                     '<thead>' +
                     '<tr>' +
