--- a/templates/questions/brand.html
+++ b/templates/questions/brand.html
@@ -345,9 +345,15 @@
                     let A10 = localStorage.getItem("A10")
                     let A11 = localStorage.getItem("A11")
                     let A12 = localStorage.getItem("A12")
+                    let answersheet = $('input[name=answersheet]').val()
+                    let last_question = $('input[name=last_question]').val()
+                    let first_question = $('input[name=first_question]').val()
                     $.ajax({
                         url: '{% url 'Survey:answer_brand_questions_ajax' %}',
                         data: {
+                            'answersheet': answersheet,
+                            'last_question': last_question,
+                            'first_question': first_question,
                             'A1': A1,
                             'A2': A2,
                             'A4': A4,
@@ -357,7 +363,7 @@
                             'A9': A9,
                             'A10': A10,
                             'A11': A11,
-                            'A12': A12
+                            'A12': A12,
                         },
                         success: function () {
                             console.log('we\'re going to next page...')
