--- a/templates/questions/base.html
+++ b/templates/questions/base.html
@@ -8,50 +8,7 @@
             integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <style>
-        body {
-            background-color: #F8F5F1;
-            text-align: right;
-        }
-
-        input, select {
-            margin-top: 30px;
-            margin-bottom: 30px;
-        }
-
-        .custom_container {
-            margin-top: 20px;
-            margin-bottom: 50px;
-            background-color: #5AA897;
-            padding: 40px;
-            border-radius: 20px;
-        }
-
-        h4 {
-            color: #45526C;
-        }
-
-        .btn-primary {
-            background-color: #45526C;
-        }
-
-        .error {
-            color: #F8A488;
-        }
-
-        .hide {
-            display: none;
-        }
-
-        @font-face {
-            font-family: myfont;
-            src: url("{% static '../../static/font/BNazanin.ttf' %}");
-        }
-
-        * {
-            font-family: myfonts;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
     {% block extra_head %}{% endblock %}
 </head>
 <body dir="rtl">
@@ -76,9 +33,7 @@
     </div>
 </div>
 {% block js %}{% endblock %}
-<script>
-    $('input[type=text]').addClass('form-control')
-    $('select').addClass('form-select')
+<script type="application/javascript" src="{% static 'js/base.js' %}">
 </script>
 </body>
 </html>
