--- a/templates/questions/survey.html
+++ b/templates/questions/survey.html
@@ -1,4 +1,5 @@
 {% extends 'questions/base.html' %}
+{% load static %}
 {% block title %}
     پرسشنامه
     {{ title }}
@@ -20,28 +21,5 @@
     </form>
 {% endblock %}
 {% block js %}
-    <script>
-        let interviewer_code = $('.interviewer_code')
-        interviewer_code.keyup(function () {
-            if (this.value.length == 5) {
-                $('.interviewer_code_error').addClass('hide')
-                var serializedData = $(this).serialize();
-                $.ajax({
-                    url: '{% url 'Survey:interviewer_get_name_ajax' %}',
-                    data: serializedData,
-                    success: function (response) {
-                        let text=JSON.stringify(response['name'])
-                        $('.interviewer_name').val(JSON.stringify(response['name']))
-                    },
-                    error: function (response) {
-                        console.log('error')
-                        alert(response["responseJSON"]["error"]);
-                        //$('.interviewer_name').val(JSON.stringify(response['error']))
-                    }
-                });
-            } else {
-                $('.interviewer_code_error').removeClass('hide')
-            }
-        })
-    </script>
+    <script type="application/javascript" src="{% static 'js/survey.js' %}"></script>
 {% endblock %}
